# MAE263C_TrevorOshiro

./: .gitignore  README.md
MAE263C/: HW1_p5.py  disc1.py  drake_pid_example.py  test.py
MAE263C/mechae263C_helpers/: pyproject.toml
MAE263C_HW2/: Dockerfile  mechae263C_homework2.py
MAE263C_HW2/mechae263C_helpers/: pyproject.toml
MAE263C_HW3/: Dockerfile  mechae263C_homework3.py
MAE263C_HW3/.devcontainer/: devcontainer.json
MAE263C_HW3/mechae263C_helpers/: pyproject.toml
MAE263C_HW4/: Dockerfile  mechae263C_homework4.py
MAE263C_HW4/.devcontainer/: devcontainer.json
MAE263C_HW4/Part1_figs/: no_control_torques_animation.avi
MAE263C_HW4/Part2_figs/: control_torques_animation.avi
MAE263C_HW4/mechae263C_helpers/: pyproject.toml
MAE263C_HW5/: mechae263C_homework5_problem1.py  mechae263C_homework5_problem2.py
MAE263C_HW5/mechae263C_helpers/: pyproject.toml
MiLa1/: minilab1_hardware.py  motorRun.py  run_macos.zsh  run_windows.ps1  setup_macos.zsh  setup_windows.ps1
MiLa2/minilab2_hardware/: minilab2_hardware.py  run_macos.zsh  run_windows.bat  setup_macos.zsh
MiLa2_Sim/minilab2_simulation/: Dockerfile  minilab2_simulation.py
MiLa2_Sim/minilab2_simulation/mechae263C_helpers/: pyproject.toml
MiLa2_Sim/minilab2_simulation/mechae263C_helpers/src/mechae263C_helpers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
MiLa2_Sim/minilab2_simulation/urdf/: robot.urdf
TestContainer/HumbleGazebo/: Dockerfile  bashrc  docker-compose.yml  entrypoint.sh
TestContainer/HumbleROS2/: Dockerfile  bashrc  docker-compose.yml  entrypointn.sh
(+120 files in other folders)
